[gd_scene load_steps=21 format=3 uid="uid://cdlcpve0poxpt"]

[ext_resource type="PackedScene" uid="uid://7jp1xska3d7w" path="res://scenes/models/house.tscn" id="1_66qwu"]
[ext_resource type="Script" path="res://scripts/light_flicker.gd" id="2_2n04y"]
[ext_resource type="Texture2D" uid="uid://bfiserp5a8woy" path="res://materials/sky/satara_night_1k.exr" id="2_re6sk"]
[ext_resource type="ArrayMesh" uid="uid://qw24fawrkxil" path="res://models/cars/NormalCar1.obj" id="4_mpkq6"]
[ext_resource type="Script" path="res://scripts/clickable_car.gd" id="5_d4nfn"]
[ext_resource type="Script" path="res://scripts/car.gd" id="5_qvlqd"]
[ext_resource type="AudioStream" uid="uid://doraf2vqjp38i" path="res://audio/sfx/alarm-car-or-home-62554.ogg" id="7_4fav2"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_fk2ew"]
dof_blur_far_enabled = true
dof_blur_far_distance = 70.0
dof_blur_far_transition = 10.0
dof_blur_near_enabled = true
dof_blur_near_distance = 21.79

[sub_resource type="CylinderMesh" id="CylinderMesh_7fdws"]

[sub_resource type="Animation" id="Animation_13r5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_a0rsb"]
resource_name = "spin"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5khdr"]
_data = {
"RESET": SubResource("Animation_13r5s"),
"spin": SubResource("Animation_a0rsb")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2p0hw"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_x40uv"]
material = SubResource("StandardMaterial3D_2p0hw")
size = Vector2(20, 10)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tku5k"]
noise_type = 0
frequency = 0.436

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_83jer"]
noise = SubResource("FastNoiseLite_tku5k")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_i8sur"]
panorama = ExtResource("2_re6sk")

[sub_resource type="Sky" id="Sky_1paio"]
sky_material = SubResource("PanoramaSkyMaterial_i8sur")

[sub_resource type="Environment" id="Environment_xycl6"]
background_mode = 2
sky = SubResource("Sky_1paio")
reflected_light_source = 2
tonemap_mode = 2
tonemap_exposure = 0.42
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_7gv3x"]
size = Vector3(2.20182, 1.80933, 4.82037)

[node name="Scene" type="Node3D"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
audio_listener_enable_3d = true
physics_object_picking = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.37074, -0.262509, -0.890865, 0.135531, 0.964246, -0.22773, 0.918794, -0.0363113, 0.393062, -18.539, 3, 4)
attributes = SubResource("CameraAttributesPractical_fk2ew")
fov = 44.7

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.05988, 3.43402, -5)
visible = false
mesh = SubResource("CylinderMesh_7fdws")
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/MeshInstance3D"]
libraries = {
"": SubResource("AnimationLibrary_5khdr")
}
autoplay = "spin"

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(10.6059, 0, 0, 0, 2.00112, 0, 0, 0, 11.0062, 0.00958884, 0, -0.00579524)
mesh = SubResource("PlaneMesh_x40uv")

[node name="Houses" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -32.9559, 0, -15.4625)

[node name="house2" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]

[node name="house3" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="house4" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="house5" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0)

[node name="house6" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="house7" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="house8" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20.2, 0, 0)

[node name="house9" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20.2, 0, 2.4)

[node name="house10" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 20.2, 0, 4.6)

[node name="house11" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, 1.74845e-07, 0, 1, 0, -1.74845e-07, 0, 1, 20.2, 0, 7)

[node name="house12" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, 20.6, 0, 9)

[node name="house13" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, 15.6, 0, 5.4)

[node name="house14" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, 12.6, 0, 5.4)

[node name="house15" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, 9.6, 0, 5.4)

[node name="house16" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(1, 0, -1.59162e-13, 0, 1, 0, 1.59162e-13, 0, 1, 6.6, 0, 5.4)

[node name="house17" parent="SubViewportContainer/SubViewport/Houses" instance=ExtResource("1_66qwu")]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, 4.2, 0, 5.4)

[node name="Lighting" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="DoorLight" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.30521, 3.23872, -11.8968)
light_energy = 10.488
shadow_enabled = true
script = ExtResource("2_2n04y")
noise = SubResource("NoiseTexture3D_83jer")
flicker_min = 8.0

[node name="WindowLight" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6948, 8.23872, -8.8968)
light_energy = 10.488
shadow_enabled = true

[node name="StreetLight" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 39.6773, 11.4039, 2.49926)
spot_range = 16.006
spot_attenuation = -0.05
spot_angle = 42.32

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/Lighting"]
environment = SubResource("Environment_xycl6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/Lighting"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, -0.364164, 0.203626, -0.908802, 0.342619, -0.878085, -0.334034, 0, 0, 0)
light_energy = 0.0
light_indirect_energy = 0.0
shadow_enabled = true

[node name="NormalCar1" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 40.7068, 0, -5.9509)
mesh = ExtResource("4_mpkq6")
skeleton = NodePath("../..")
script = ExtResource("5_qvlqd")

[node name="HeadlightLeft" type="OmniLight3D" parent="SubViewportContainer/SubViewport/NormalCar1"]
transform = Transform3D(-0.5, 0, 2.96146e-08, 0, 0.5, 0, -2.96146e-08, 0, -0.5, 0.485601, 0.526241, 2.26955)
light_energy = 5.114
omni_range = 1.565
omni_attenuation = 10.0

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewportContainer/SubViewport/NormalCar1/HeadlightLeft"]
transform = Transform3D(1, -1.76365e-08, -1.52206e-09, 1.76365e-08, 0.985214, 0.171327, -1.52206e-09, -0.171327, 0.985214, -0.230735, -0.144662, 3.57335)
spot_range = 48.745
spot_attenuation = -1.0
spot_angle = 15.3137

[node name="HeadlightRight" type="OmniLight3D" parent="SubViewportContainer/SubViewport/NormalCar1"]
transform = Transform3D(-0.5, 0, 2.96146e-08, 0, 0.5, 0, -2.96146e-08, 0, -0.5, -0.52683, 0.413785, 2.19207)
light_energy = 5.114
omni_range = 1.565
omni_attenuation = 10.0

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport/NormalCar1/HeadlightRight"]
transform = Transform3D(1, -1.76365e-08, -1.52206e-09, 1.76365e-08, 0.985214, 0.171327, -1.52206e-09, -0.171327, 0.985214, 0.0467257, -0.164444, 3.32402)
spot_range = 50.0867
spot_attenuation = -1.0
spot_angle = 15.3137

[node name="Area3D" type="Area3D" parent="SubViewportContainer/SubViewport/NormalCar1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/NormalCar1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0179763, 0.802482, 0.240154)
shape = SubResource("BoxShape3D_7gv3x")
script = ExtResource("5_d4nfn")

[node name="AlarmTimer" type="Timer" parent="SubViewportContainer/SubViewport/NormalCar1"]
wait_time = 5.0
one_shot = true

[node name="AlarmFlashTimer" type="Timer" parent="SubViewportContainer/SubViewport/NormalCar1/AlarmTimer"]
wait_time = 0.3

[node name="AlarmAudio" type="AudioStreamPlayer3D" parent="SubViewportContainer/SubViewport/NormalCar1"]
stream = ExtResource("7_4fav2")
bus = &"cam_audio"

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport/NormalCar1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.992916, 1.53606, 0.972233)
light_energy = 10.783
omni_range = 6.009

[connection signal="input_event" from="SubViewportContainer/SubViewport/NormalCar1/Area3D" to="SubViewportContainer/SubViewport/NormalCar1/Area3D/CollisionShape3D" method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="SubViewportContainer/SubViewport/NormalCar1/Area3D" to="SubViewportContainer/SubViewport/NormalCar1/Area3D/CollisionShape3D" method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="SubViewportContainer/SubViewport/NormalCar1/Area3D" to="SubViewportContainer/SubViewport/NormalCar1/Area3D/CollisionShape3D" method="_on_area_3d_mouse_exited"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/NormalCar1/AlarmTimer" to="SubViewportContainer/SubViewport/NormalCar1" method="_on_alarm_timer_timeout"]
[connection signal="timeout" from="SubViewportContainer/SubViewport/NormalCar1/AlarmTimer/AlarmFlashTimer" to="SubViewportContainer/SubViewport/NormalCar1" method="_on_alarm_flash_timer_timeout"]
